--- a/assets/styles.css
+++ b/assets/styles.css
@@ -46,6 +46,12 @@ main{
    padding-bottom: 50px;
    color: #1a1a1a ;
 }
+.post-main{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-top: 10px;
+  }
 .section-main{
     display: flex;
     padding-bottom: 25px;
@@ -53,7 +59,7 @@ main{
 }
 
 hr{
-    width: 100%;
+    width: 80%;
 }
 
 footer{
@@ -63,14 +69,13 @@ footer{
     align-items: center;
     background-color: #1a1a1a;
 }
-.footer-h2{
-
-}
+ 
 .footer-links{
     display: flex;
     justify-content: space-between;
 }
 .footer-a{
+    padding: 25px;
     color: #e0e0e0;
 }
 
@@ -133,6 +138,57 @@ footer{
     .footer-credits{
         font-size: x-small;
     }
+    .post-main{
+        margin-left: 5%;
+        margin-right: 5%;
+    }
+     
+    .post-section-main{
+        
+         flex-direction: column;
+         align-items: center;
+        
+    }
+    .post-section-main img{
+        width: 100%;
+        border-radius: 0px 0px 20px 20px;
+    }
+    .post-section-main p{
+        width: 50%;
+        flex-direction: column;
+      }
+     
+      .post-section-main p {
+        width: 40%;
+        padding: 10px 10px 10px 10px;
+        font-size: 1.5rem;
+        
+
+      }
+    .post-container, .post-section-content, .post-section-resume{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+ 
+    .post-section-resume p, .post-section-content p{
+        margin: 0;
+        padding-top: 25px;
+        text-align: justify;
+        width: 70%;
+        min-width: 300px;
+         
+         
+    }
+    
+
+    .post-section-content img{
+        width: 75%;
+        max-width: 600px;
+        border-radius: 5px 5px 5px 5px;
+    }
+ 
+      
       
   }
 
@@ -199,6 +255,56 @@ footer{
     .footer-credits{
         font-size: x-small;
     }
+    main{
+        font-size:20px ;
+    }
+   
+ 
+    .post-section-main{
+        display: flex;
+         align-items: center;
+         padding-bottom: 25px;
+    }
+    .post-section-main img{
+        width: 70%;
+        max-width: 1800px;
+        border-radius: 0px 0px 20px 20px;
+    }
+    .post-section-main p{
+         
+        width: 75%;
+        text-align:center;
+        
+      }
+      h1{
+        font-size: 2rem;
+    }
+     
+   
+    
+    .post-container, .post-section-content, .post-section-resume{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+ 
+    .post-section-resume p, .post-section-content p{
+        margin: 0;
+        padding-top: 25px;
+        text-align: justify;
+         
+        width: 50%;
+         
+         
+    }
+    
+
+    .post-section-content img{
+        width: 60%;
+        
+        border-radius: 5px 5px 5px 5px;
+    }
+ 
       
   }
 
